# ObeStoreBE

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  readme.md
.github/workflows/: build.yml  checks.yml  deploy.yml
carts/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
carts/migrations/: 0001_initial.py  0002_initial.py
carts/services/: __init__.py  cart.py
config/: urls.py
config/settings/: base.py  dev.py  prod.py
locust/: locustfile.py
locust_test/: locustfile.py
monitoring/: docker-compose.yml
orders/: admin.py  choices.py  models.py  serializers.py  seriallizers.py  signals.py  urls.py  views.py
orders/migrations/: 0001_initial.py  0002_initial.py
orders/schemas/: order_schema.py  payment_schema.py
orders/services/: order_service.py  payment_service.py
products/: admin.py  filters.py  models.py  permissions.py  serializer.py  serializers.py  urls.py  views.py
products/migrations/: 0001_initial.py  0002_initial.py
reviews/: admin.py  apps.py  filters.py  models.py  schema.py  serializers.py  signals.py  tests.py  urls.py  views.py
reviews/migrations/: 0001_initial.py  0002_initial.py
scripts/: node_metrics.sh  run.sh
templates/emails/: verify_email.html
users/: admin.py  apps.py  auth.py  models.py  schema.py  serializers.py  signals.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_address_is_default_alter_point_amount_and_more.py  0003_alter_sociallogin_provider_user_id.py
users/services/: points.py
utils/: upload_path.py  upload_paths.py
wishlists/: admin.py  models.py  schema.py  serializers.py  urls.py  views.py
wishlists/migrations/: 0001_initial.py
